--- a/src/app/onboarding/onboarding.module.css
+++ b/src/app/onboarding/onboarding.module.css
@@ -18,7 +18,7 @@
 .logo {
   display: inline-flex;
   align-items: center;
-  gap: -15px;
+  gap: -50px;
 }
 
 .logoImg {
